--- a/style.css
+++ b/style.css
@@ -1,236 +1,237 @@
-body {
-    margin: 0px;
-    scroll-behavior: smooth;
-}
-
-.header {
-    height: 100px;
-    width: 100%;
-    background-color: #363062;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.header a {
-    color: #F99417;
-    font-size: 30px;
-    text-decoration: none;
-    margin-right: 30px;
-    font-family: sans-serif;
-    letter-spacing: 0.5px;
-}
-
-.aboutUsContainer {
-    width: 100%;
-    height: 100%;
-    background-color: #363062;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.aboutUsContainer img {
-    width: 250px;
-    height: 250px;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-top: 60px;
-}
-
-.aboutUsContainer h2 {
-    color: #f99417;
-    font-family: sans-serif;
-    font-size: 40px;
-    font-weight: 300;
+*{
     margin: 0;
-    margin-top: 30px;
-    margin-bottom: 10px;
-}
-
-.aboutUsContainer p {
-    color: white;
-    font-size: 22px;
-    font-family: fantasy;
-    letter-spacing: 2px;
-    margin: 0px;
-}
-
-.fa-linkedin,
-.fa-facebook,
-.fa-instagram,
-.fa-youtube {
-    color: white;
-    margin: 5px;
-}
-
-.profileIconsContainer {
-    margin-top: 5px;
-}
-
-.waveImageBg {
-    width: 100%;
-}
-
-.skillsTitle {
-    text-align: center;
-    font-size: 32px;
-    font-family: sans-serif;
-    color: #f28703;
-    letter-spacing: 1px;
-    font-weight: 600;
-}
-
-.skillsImagesContainer {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 100px;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.skillsImagesContainer img {
-    width: 350px;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 15px;
-    margin: 15px;
-}
-
-.educationContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #363062;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    padding-top: 40px;
-    padding-bottom: 100px;
-}
-
-
-.educationContainer p {
-    text-align: center;
-    font-size: 32px;
-    font-family: sans-serif;
-    color: #f28703;
-    letter-spacing: 1px;
-    font-weight: 600;
-}
-
-.educationContainer table {
-    border-collapse: collapse;
-    font-family: sans-serif;
-    width: 70%;
-}
-
-.educationContainer table tr:nth-of-type(1) {
-    background-color: #FFCF94;
-    color: #CE7200;
-    font-size: 20px;
-}
-
-.educationContainer table tr:nth-of-type(3) {
-    background-color: #ECECEC;
-}
-
-.educationContainer table tr:nth-of-type(2),
-.educationContainer table tr:nth-of-type(4) {
-    background-color: white;
-}
-
-.educationContainer table tr td {
-    padding: 20px;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
     border: none;
+    outline: none;
+    scroll-behavior: none;
+    font-family: 'poppins',sans-serif;
+}
+:root{
+    --bg-color:#1f242d;
+    --second-bg-color:#323946;
+    --text-color:#fff;
+    --main-color:#0ef;
+}
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+}
+body{
+    background: var(--bg-color);
+    color: var(--text-color);
+}
+section{
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
+}
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 2rem 9%;
+    background: var(--bg-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+.logo{
+    font-size: 2.5rem;
+    color: var(--text-color);
+    font-weight: 600;
+    cursor: default;
+}
+.navbar a {
+    font-size: 1.7rem;
+    color: var(--text-color);
+    margin-left: 4rem;
+    transition: .3s;
+}
+.navbar a:hover,
+.navbar a.active{
+    color: var(--main-color);
+}
+#menu-icon{
+    font-size: 3.6rem;
+    color: var(--text-color);
+    display: none;
+}
+.home-image img{
+    width: 35vh;
+    animation: floatImage 4s ease-in-out infinite;
+}
+@keyframes floatImage{
+    0%{
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(-2.4rem);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+.home{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.home-content h3{
+    font-size: 3.2rem;
+    font-weight: 700;
+}
+.home-content h3 :nth-of-type(2){
+    margin-bottom: 2rem;
 }
 
-.educationContainer table tr:nth-of-type(1) td:nth-of-type(1),
-.educationContainer table tr:nth-of-type(1) td:nth-of-type(2) {
-    border-right: 1px solid #CE7200;
+span{
+    color: var(--main-color);
 }
 
-.educationContainer table tr:nth-of-type(2) td:nth-of-type(1),
-.educationContainer table tr:nth-of-type(2) td:nth-of-type(2) {
-    border-right: 1px solid #D1D1D1;
+.home-content h1{
+    font-size: 5.6rem;
+    font-weight: 700;
+    line-height: 1.3;
+}
+.home-content p{
+    font-size: 1.6rem;
+}
+.socialmedia a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 4rem;
+    height: 4rem;
+    background: transparent;
+    border: .2rem solid var(--main-color);
+    border-radius: 50%;
+    font-size: 2rem;
+    color: var(--main-color);
+    margin: 3rem 1.5rem 3rem 0;
+    transition: .5s ease;
+}
+.socialmedia a:hover{
+    background: var(--main-color);
+    color:var(--second-bg-color);
+    box-shadow: 0 0 1rem var(--main-color);
 }
 
-.educationContainer table tr:nth-of-type(3) td:nth-of-type(1),
-.educationContainer table tr:nth-of-type(3) td:nth-of-type(2) {
-    border-right: 1px solid #D1D1D1;
+.btn{
+    display:inline-flex;
+    padding: 1rem 2.8rem;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.6rem;
+    color: var(--second-bg-color);
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+}
+.btn:hover{
+    box-shadow: none;
 }
 
-.educationContainer table tr:nth-of-type(4) td:nth-of-type(1),
-.educationContainer table tr:nth-of-type(4) td:nth-of-type(2) {
-    border-right: 1px solid #D1D1D1;
+.about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    background: var(--second-bg-color);
 }
-
-.footerSection {
-    background-color: #363062;
-    padding-top: 10px;
-    padding-bottom: 10px;
+.about-image img{
+    width: 35vh;
 }
-
-.footerSection p {
-    color: white;
-    font-family: sans-serif;
+.heading{
     text-align: center;
-    letter-spacing: 4px;
-    font-weight: 100;
+    font-size: 4.5rem;
+}
+.about-content h2{
+    text-align: left;
+    line-height: 1.2;
+}
+.about-content h3{
+    font-size: 2.6rem;
+}
+.about-content p{
+    font-size: 1.6rem;
+    margin: 2rem 0 3rem;
 }
 
-
-
-
-/* media quries */
-
-@media (max-width:425px) {
-    .skillsImagesContainer img {
-        width: 280px;
-        height: 149px;
-    }
-
-    .header {
-        flex-wrap: wrap;
-        gap: 10px;
-        padding: 15px;
-        width: calc(98% - 25px);
-    }
-
-    .header a {
-        font-size: 22px;
-        margin-right: 0;
-    }
-
-    .footerSection p {
-        line-height: 27px;
-    }
-
-    .educationContainer table tr {
-        font-size: 13px;
-    }
-
-    .educationContainer table tr:nth-of-type(1) {
-        font-size: 14px;
-    }
-
-    .educationContainer table {
-        width: 95%;
-    }
-
-    .educationContainer p {
-        font-size: 22px;
-    }
-
-    .aboutUsContainer h2 {
-        font-size: 25px;
-    }
-
-    .aboutUsContainer img {
-        width: 200px;
-        height: 200px;
-    }
-
-    .skillsTitle {
-        font-size: 22px;
-    }
+.projects h2{
+    margin-bottom: 5rem;
+}
+.project-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+.project-container .project-box{
+    flex: 1 1 30rem;
+    background: var(--second-bg-color);
+    padding: 3rem 2rem 4rem;
+    border-radius: 2rem;
+    text-align: center;
+    border: .2rem solid var(--bg-color);
+    transition: .5s ease;
+}
+.project-container .project-box:hover{
+    border-color: var(--main-color);
+    transform: scale(1.02);
+}
+.project-box i{
+    font-size: 7rem;
+    color: var(--main-color);
+}
+.project-box h3{
+    font-size: 2.6rem;
+}
+.project-box p{
+    font-size: 1.6rem;
+    margin: 1rem 0 3rem;
+}
+.contact{
+    background: var(--second-bg-color);
+}
+.contact h2{
+    margin-bottom: 3rem;
+}
+.contact form{
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+.contact form .input-box input,
+.contact form textarea{
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--second-bg-color);
+    background: var(--main-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
+}
+.contact form .input-box input{
+    width: 49%;
+}
+.contact form textarea{
+    resize: none;
+}
+.contact form .btn{
+    margin-top: 2rem;
+    cursor: pointer;
+}
+.footer{
+    text-align: center;
+    background-color: var(--bg-color);
+    padding: 2rem 9%;
+}
+.footer-text p{
+    font-size: 1.6rem;
 }
