--- a/style.css
+++ b/style.css
@@ -235,3 +235,19 @@ span{
 .footer-text p{
     font-size: 1.6rem;
 }
+@media(max-width:1200px){
+    html{
+        font-size:55%;
+    }
+}
+@media(max-width:991px){
+    .header{
+        padding:2rem 3%;
+    }
+    section{
+        padding:10rem 3% 2rem;
+    }
+    .footer{
+        padding:2rem 3%;
+    }
+}
