--- a/style.css
+++ b/style.css
@@ -50,6 +50,9 @@ section{
     margin-left: 4rem;
     transition: .3s;
 }
+.navbar.active{
+    display:block;
+}
 .navbar a:hover,
 .navbar a.active{
     color: var(--main-color);
