--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ section{
 #menu-icon{
     font-size: 3.6rem;
     color: var(--text-color);
+    display:block;
 }
 .home-image img{
     width: 35vh;
