--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ section{
 #menu-icon{
     font-size: 3.6rem;
     color: var(--text-color);
-    display:block;
+    display:none;
 }
 .home-image img{
     width: 35vh;
