--- a/style.css
+++ b/style.css
@@ -61,28 +61,10 @@ section{
     font-size: 3.6rem;
     color: var(--text-color);
     display:none;
-.home-image {
-    position: relative;
-    display: inline-block;
-}
-
 .home-image img {
-    width: 70vh; /* Adjust the size as needed */
-    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    width: 70vh;
     animation: floatImage 4s ease-in-out infinite;
-}
-
-.home-image::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    clip-path: inherit;
-    background: rgba(139, 69, 19, 0.8);
-    filter: blur(10px);
-    z-index: -1;
+    box-shadow: 0 0 20px 10px rgba(139, 69, 19, 0.8);
 }
 @keyframes floatImage{
     0%{
